# src/main/java/com/hoadon/dto/PriceRequest.java
@@ -5,19 +5,14 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
 
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class PriceDTO {
-
-    private Long id;
+public class PriceRequest {
     private String name;
     private BigDecimal importPrice;
     private BigDecimal salePrice;
     private String note;
     private String imageUrl;
-    private LocalDateTime createdAt;
-    private LocalDateTime updatedAt;
 }
